Bugfix: admin-home image not showing.  All connection api connection from frontend complete.

--- a/frontend/src/pages/DiseasePredict.css
+++ b/frontend/src/pages/DiseasePredict.css
@@ -20,7 +20,7 @@
     align-items: center;
     max-height: 80vh;
     overflow: auto;
-    padding-top: 10vh;
+    padding-top: 15vh;
 }
 
 .identify-disease-nopad{
